# mechabellum_replay_parser

./: .env.example  .gitignore  2v2_unknowns.md  Dockerfile  TECHNICAL.md  USAGE.md  alembic.ini  docker-compose.yml  game_knowledge.md  pyproject.toml
.debug/: latest_bundles.json  latest_coordinate_frame.json  latest_failure_report.md  latest_features.json  latest_judge_response.json  latest_legal_actions.json  latest_parsed.json  latest_plan_scores.json  latest_planner_response.json  latest_recommendation.json  latest_resolved_placement.json  latest_state_view.json  latest_timings.json  latest_validation.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_influence_fields.py
eval_cases/case_001_air_threat/: expected.json  metadata.json  state_view.json
eval_cases/case_002_chaff_flood/: expected.json  metadata.json  state_view.json
eval_cases/case_003_heavy_frontline/: expected.json  metadata.json  state_view.json
eval_cases/case_003_tower_exposure/: expected.json  metadata.json  state_view.json
eval_cases/case_004_artillery_backline/: expected.json  metadata.json  state_view.json
eval_cases/case_005_flank_opportunity/: expected.json  metadata.json  state_view.json
scripts/: gen_eval_cases.py
tests/: conftest.py  test_api.py  test_api_events.py  test_broker.py  test_constructions.py  test_coordinates.py  test_db.py  test_db_feedback.py  test_db_influence.py  test_debug_report_builder.py  test_eval_cases.py  test_eval_influence.py  test_eval_rubric.py  test_eval_runner.py  test_feature_extractor.py  test_influence_analyzer.py  test_influence_debug.py  test_influence_llm_contract.py  test_influence_map.py  test_influence_plan_scorer.py  test_influence_schemas.py  test_judge.py  test_knowledge.py  test_learning_export.py  test_learning_influence_export.py  test_learning_outcomes.py  test_legal_actions.py  test_llm_pipeline.py  test_native_ui.py  test_parse_placement.py  test_placement_resolver.py  test_plan_scorer.py  test_planner.py  test_recommendation_builder.py  test_schemas.py  test_state_view.py  test_tactical_bundles.py  test_transformer.py  test_unit_roles.py  test_unit_stats.py  (+1 more)
(+88 files in other folders)
