[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechabellum-replay-parser"
version = "1.0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prettytable>=3.14.0",
    "watchdog>=6.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
mechabellum-replay-parser = "mechabellum_replay_parser.cli:main"
mech-gui = "mechabellum_replay_parser.gui:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/**", "tests/**"]


[bumpver]
current_version = "1.0.6"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]


[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
